# machine-learning-workshop

./: .gitignore  README.md  requirements.txt
athena/: create_tweets_table.sql  tweet_sentiment.sql  tweet_sentiment_by_day.sql  tweets.py
autogluon/: AutoGluon Tutorial - Quick Start.ipynb
aws_clean_rooms/: generate_cleanroom_data.py
claude-skills/: .gitignore  README.md
claude_code/: DEMO-FLOW.md  DEMO_FLOW.md  (+7 more)
langchain/eliciting_reasoning/: .gitignore  EXPERIMENT_REPORT.md  EXPERIMENT_RESULTS.md  FINAL_CLAUDE_COMPARISON_REPORT.md  FINAL_EXPERIMENT_REPORT.md  IMPROVED_EXPERIMENT_REPORT.md  MODEL_COMPARISON_REPORT.md  README.md  VALIDATION_REPORT.md  pyproject.toml
langchain/eliciting_reasoning/docs/: cognitive_tools_implementation.md  toolnode_explanation.md
langchain/eliciting_reasoning/examples/: README.md  model_comparison.py  simple_example.py
langchain/eliciting_reasoning/experiments/: evaluation.py  run_experiment.py
langchain/eliciting_reasoning/experiments/datasets/: challenging_problems.json  math_problems.json  medium_problems.json  small_test.json
langchain/eliciting_reasoning/src/: __init__.py
langchain/eliciting_reasoning/src/agents/: __init__.py  cognitive_agent.py
langchain/eliciting_reasoning/src/graphs/: __init__.py  reasoning_graph.py  state.py
langchain/eliciting_reasoning/src/prompts/: system_prompts.py
langchain/eliciting_reasoning/src/tools/: __init__.py  backtracking.py  base.py  examine_answer.py  recall_related.py  understand_question.py  use_code.py
mcp/: README.md  pyproject.toml  server.py  test_client.py
(+212 files in other folders)
