[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-mcp-server"
version = "0.1.0"
description = "A simple Model Context Protocol (MCP) server implementation"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "mcp>=0.1.0",
]

[project.scripts]
simple-mcp-server = "server:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]